force-app/main/default/objects/refedge__Reference_Request_Account__c/fields/refedge__Community_Invite__c.field-meta.xml
<CustomField>
    <fullName>refedge__Community_Invite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Invite</label>
    <referenceTo>refedge__Community_Invite__c</referenceTo>
    <relationshipLabel>Account Requests</relationshipLabel>
    <relationshipName>Account_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>