force-app/main/default/objects/refedge__Reference_Request_Account__c/fields/refedge__Influitive_Challenge_Status__c.field-meta.xml
<CustomField>
    <fullName>refedge__Influitive_Challenge_Status__c</fullName>
    <label>Influitive Challenge Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unpublish</fullName>
            </value>
            <value>
                <fullName>Publish</fullName>
            </value>
            <value>
                <fullName>UnArchive</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>