force-app/main/default/objects/refedge__Reference_Request_Account__c/fields/refedge__Is_No_Response__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_No_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Response</label>
    <type>Checkbox</type>
</CustomField>