force-app/main/default/objects/refedge__Reference_Request_Account__c/fields/refedge__Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>refedge__Project_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>