force-app/main/default/objects/refedge__Reference_Request_Account__c/fields/refedge__Reference_Owner__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>