force-app/main/default/objects/refedge__Reference_Request_Account__c/fields/refedge__Reference_Request__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Request__c</fullName>
    <description>Reference request association</description>
    <inlineHelpText>Reference request association</inlineHelpText>
    <label>Reference Request</label>
    <referenceTo>refedge__Reference_Request__c</referenceTo>
    <relationshipName>Reference_Request_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>