force-app/main/default/objects/refedge__Reference_Request_Account__c/fields/refedge__Related_Feed_Item_Ids__c.field-meta.xml
<CustomField>
    <fullName>refedge__Related_Feed_Item_Ids__c</fullName>
    <label>Related Feed Item Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>