force-app/main/default/objects/refedge__Reference_Request_Account__c/fields/refedge__Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>refedge__Request_Notes__c</fullName>
    <inlineHelpText>Provide details that will help the recipient process your request.</inlineHelpText>
    <label>Request Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>