force-app/main/default/objects/refedge__Reference_Request_Account__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Requester__c</columns>
    <columns>refedge__Approval_Status__c</columns>
    <columns>refedge__Account_Request_Status__c</columns>
    <columns>refedge__Managed_Request__c</columns>
    <columns>refedge__Combined_Status__c</columns>
    <columns>refedge__Reference_Type_Needed__c</columns>
    <columns>refedge__Deadline__c</columns>
    <columns>refedge__Reference_Use__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>